--- a/head.html
+++ b/head.html
@@ -2,4 +2,5 @@
 <script src="/scripts/aem.js" type="module"></script>
 <script src="/scripts/scripts.js" type="module"></script>
 <script src="/scripts/api-call.js" defer></script>
+<script src="/scripts/login-form.js" defer></script>
 <link rel="stylesheet" href="/styles/styles.css"/>
